fix zoom out z-index on trends

--- a/resources/sass/card.scss
+++ b/resources/sass/card.scss
@@ -34,6 +34,11 @@
 .advanced-trend-card {
     overflow: hidden;
 
+    .zoom-out {
+        position: relative;
+        z-index: 1;
+    }
+
     .last-trend-value {
         position: relative;
         z-index: 10;
@@ -42,6 +47,8 @@
     .advanced-trend {
         margin: -100px -35px;
         margin-bottom: 0;
+        position: relative;
+        z-index: 0;
 
         .apexcharts-xaxis {
             display: none;
